--- a/.typos.toml
+++ b/.typos.toml
@@ -35,6 +35,7 @@ xdescribe = "xdescribe"
 seeked = "seeked"
 labeledby = "labeledby"
 hashi = "hashi"
+inferrable = "inferrable" # This is how tsc spells it, and we should match them exactly
 
 [default.extend-identifiers]
 IIFEs = "IIFEs"
