--- a/crates/oxc_type_checker/Cargo.toml
+++ b/crates/oxc_type_checker/Cargo.toml
@@ -30,5 +30,8 @@ oxc_syntax = { workspace = true }
 bitflags = { workspace = true }
 rustc-hash = { workspace = true }
 
+[dev-dependencies]
+oxc_parser = { workspace = true }
+
 [features]
 default = []
