--- a/crates/oxc_estree/Cargo.toml
+++ b/crates/oxc_estree/Cargo.toml
@@ -12,12 +12,18 @@ repository.workspace = true
 rust-version.workspace = true
 description.workspace = true
 
-[dependencies]
-serde = { workspace = true, optional = true }
-
 [lints]
 workspace = true
 
+[lib]
+doctest = false
+
+[dependencies]
+oxc_allocator = { workspace = true, features = ["serialize"], optional = true }
+
+serde = { workspace = true, optional = true }
+serde_json = { workspace = true, optional = true }
+
 [features]
 default = []
-serialize = ["dep:serde"]
+serialize = ["dep:oxc_allocator", "dep:serde", "dep:serde_json"]
